consult ok : il manque 1 select pour la recherche

--- a/consult_parcours_candidat.html
+++ b/consult_parcours_candidat.html
@@ -55,10 +55,21 @@
             <th>Prénom</th>
             <td><input type="text" name="prenom"></td>
         </tr>
-    </table>
+        </tr>
+        <tr>
+            <th rowspan="2">Langue</th>
+            <td><input type="radio" value='FR' name="langue" checked>Français</td>
+        </tr>
+        <tr>
+            <td><input type="radio" value='EN' name="langue">English</td>
+        </tr>
 
-<br>
-<input type="submit" value="Valider">
+
+
+<tr></tr>
+<tr><td><input type="submit" value="Valider"></td></tr>
+
+    </table>
 </form>
 
 
