--- a/select.html
+++ b/select.html
@@ -55,7 +55,7 @@
 <br>
 <li><a href="consult_parcours_candidat.html">Consulter le parcours d'un candidat (diplomes, postes occupés, nombre d'expériences professionnelles acquise, langues maîtrisées)</a></li>
 <br>
-<li><a href="consult_candidat_critere.html">Consulter des candidats en fonction de critères (nombre d'expériences professionnelles, année d'obtention du dernier diplome, poste souhaité)</a></li>
+<li><a href="consult_candidat_critere.php">Consulter des candidats en fonction de critères (nombre d'expériences professionnelles, année d'obtention du dernier diplome, poste souhaité)</a></li>
 <br>
 
 
