--- a/mise_en_page.html
+++ b/mise_en_page.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-  <title>INSCRIPTION A UN SITE DE CANDIDATURE</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
+    <title>Rechercher les candidats qui correspondent à vos critères</title>
 </head>
-<body> 
+<body>
+
 <div id="contenu">
     <div id="Menu">
     </div>
@@ -14,23 +15,30 @@
 <nav>
     <ul>
         <li><a href="page1_projet.php">Accueil</a></li>
-	</br>
-	<p>Espace Candidats</p>
-	</br>
+        </br>
+        <p>Espace Candidats</p>
+        </br>
         <li><a href="insert.php">Ajouter votre CV</a></li>
-        <li><a href="Modification.php">Modifier votre CV</a></li>
-	</br>
-	<p>Espace Référents</p>
-	</br>
-	<li><a href="select.html">Consulter les CV</a></li>
+        <li><a href="check.php">Modifier votre CV</a></li>
+        </br>
+        <p>Espace Entreprise</p>
+        </br>
+        <li><a href="select.html">Consulter les CV</a></li>
+        <br>
+        <p>Espace Référents</p>
+        </br>
+        <li><a href="consult_referent.html">Consulter vos candidats</a></li>
     </ul>
 </nav>
+
 <style>
-nav{
-    float:left;
-    width:25%;
-    height:100%;
-    border-right:1px dashed #CCC;
-}
+    nav{
+        float:left;
+        width:25%;
+        height:100%;
+        border-right:1px dashed #CCC;
+        /*padding:20px;
+        margin-top:40px;*/
+    }
 </style>
 </html>
