--- a/mise_en_page.html
+++ b/mise_en_page.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Rechercher les candidats qui correspondent à vos critères</title>
+    <title>INSCRIPTION A UN SITE DE CANDIDATURE</title>
 </head>
 <body>
 
@@ -19,7 +19,7 @@
         <p>Espace Candidats</p>
         </br>
         <li><a href="insert.php">Ajouter votre CV</a></li>
-        <li><a href="check.php">Modifier votre CV</a></li>
+        <li><a href="Modification.php">Modifier votre CV</a></li>
         </br>
         <p>Espace Entreprise</p>
         </br>
