--- a/select.html
+++ b/select.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Consulter les CV</title>
+    <title>Rechercher les candidats qui correspondent à vos critères</title>
 </head>
 <body>
 
@@ -20,11 +19,15 @@
         <p>Espace Candidats</p>
         </br>
         <li><a href="insert.php">Ajouter votre CV</a></li>
-        <li><a href="Modification.php">Modifier votre CV</a></li>
+        <li><a href="check.php">Modifier votre CV</a></li>
         </br>
-        <p>Espace Référents</p>
+        <p>Espace Entreprise</p>
         </br>
         <li><a href="select.html">Consulter les CV</a></li>
+        <br>
+        <p>Espace Référents</p>
+        </br>
+        <li><a href="consult_referent.html">Consulter vos candidats</a></li>
     </ul>
 </nav>
 
@@ -38,6 +41,7 @@
         margin-top:40px;*/
     }
 </style>
+</html>
 
 <h1>Consulter les informations sur les candidats</h1>
 
@@ -51,7 +55,7 @@
 <br>
 <li><a href="consult_parcours_candidat.html">Consulter le parcours d'un candidat (diplomes, postes occupés, nombre d'expériences professionnelles acquise, langues maîtrisées)</a></li>
 <br>
-<li><a href="consult_candidat_critere.html">Consulter des candidats en fonction de critères (nombre d'expériences professionnelles, année d'obtention du dernier diplome, poste souhaité)</a></li>
+<li><a href="consult_candidat_critere.php">Consulter des candidats en fonction de critères (nombre d'expériences professionnelles, année d'obtention du dernier diplome, poste souhaité)</a></li>
 <br>
 
 
