--- a/consult_referent.html
+++ b/consult_referent.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Consulter les candidats que vous gérez</title>
+    <title>INSCRIPTION A UN SITE DE CANDIDATURE</title>
 </head>
 <body>
 
@@ -20,7 +19,7 @@
         <p>Espace Candidats</p>
         </br>
         <li><a href="insert.php">Ajouter votre CV</a></li>
-        <li><a href="check.php">Modifier votre CV</a></li>
+        <li><a href="Modification.php">Modifier votre CV</a></li>
         </br>
         <p>Espace Entreprise</p>
         </br>
@@ -38,7 +37,8 @@
         width:25%;
         height:100%;
         border-right:1px dashed #CCC;
-
+        /*padding:20px;
+        margin-top:40px;*/
     }
 </style>
 
